Assignment/assignment3-ver1.2 - Copy/assignment3/initial/target/CSELParser.py
# Generated from main/csel/parser/CSEL.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CSELParser ( Parser ):

    grammarFileName = "CSEL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'Break'", "'Continue'", "'If'", "'Elif'", "'Else'", 
                     "'While'", "'For'", "'Of'", "'In'", "'Function'", "'Let'", 
                     "'True'", "'False'", "'Call'", "'Return'", "'Number'", 
                     "'Boolean'", "'String'", "'JSON'", "'Array'", "'Constant'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", 
                     "'>'", "'>='", "'<'", "'<='", "'!'", "'&&'", "'||'", 
                     "'+.'", "'==.'", "'='", "'('", "')'", "'['", "']'", 
                     "'{'", "'}'", "':'", "'.'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "ID", "NUMLIT", "STRINGLIT", "BREAK", 
                      "CONTINUE", "IF", "ELIF", "ELSE", "WHILE", "FOR", 
                      "OF", "IN", "FUNCTION", "LET", "TRUE", "FALSE", "CALL", 
                      "RETURN", "NUMBER", "BOOLEAN", "STRING", "JSON", "ARRAY", 
                      "CONSTANT", "ADD", "SUB", "MUL", "DIV", "MOD", "EQ", 
                      "NEQ", "GT", "GTE", "LT", "LTE", "NOT", "AND", "OR", 
                      "SADD", "SEQ", "ASSIGN", "LP", "RP", "LQP", "RQP", 
                      "LB", "RB", "COLON", "DOT", "CM", "SM", "COMMENT", 
                      "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_manyDecl = 1
    RULE_varDecl = 2
    RULE_typ = 3
    RULE_variable = 4
    RULE_vartail = 5
    RULE_var = 6
    RULE_varlist = 7
    RULE_literal = 8
    RULE_arrayLiteral = 9
    RULE_jsonLiteral = 10
    RULE_funcDecl = 11
    RULE_paraList = 12
    RULE_param = 13
    RULE_body = 14
    RULE_stmtList = 15
    RULE_manyStmt = 16
    RULE_otherStmt = 17
    RULE_assignStmt = 18
    RULE_arrList = 19
    RULE_jsonList = 20
    RULE_ifStmt = 21
    RULE_forStmt = 22
    RULE_forIn = 23
    RULE_forOf = 24
    RULE_whileStmt = 25
    RULE_breakStmt = 26
    RULE_continueStmt = 27
    RULE_callStmt = 28
    RULE_funcall = 29
    RULE_returnStmt = 30
    RULE_expr = 31
    RULE_stringExpr = 32
    RULE_logicExpr = 33
    RULE_additiveExpr = 34
    RULE_multiplicateExpr = 35
    RULE_unaryLogicExpr = 36
    RULE_unarySignExpr = 37
    RULE_indexExpr = 38
    RULE_indexOperator = 39
    RULE_keyExpr = 40
    RULE_keyOperator = 41
    RULE_finalExpr = 42
    RULE_callList = 43

    ruleNames =  [ "program", "manyDecl", "varDecl", "typ", "variable", 
                   "vartail", "var", "varlist", "literal", "arrayLiteral", 
                   "jsonLiteral", "funcDecl", "paraList", "param", "body", 
                   "stmtList", "manyStmt", "otherStmt", "assignStmt", "arrList", 
                   "jsonList", "ifStmt", "forStmt", "forIn", "forOf", "whileStmt", 
                   "breakStmt", "continueStmt", "callStmt", "funcall", "returnStmt", 
                   "expr", "stringExpr", "logicExpr", "additiveExpr", "multiplicateExpr", 
                   "unaryLogicExpr", "unarySignExpr", "indexExpr", "indexOperator", 
                   "keyExpr", "keyOperator", "finalExpr", "callList" ]

    EOF = Token.EOF
    ID=1
    NUMLIT=2
    STRINGLIT=3
    BREAK=4
    CONTINUE=5
    IF=6
    ELIF=7
    ELSE=8
    WHILE=9
    FOR=10
    OF=11
    IN=12
    FUNCTION=13
    LET=14
    TRUE=15
    FALSE=16
    CALL=17
    RETURN=18
    NUMBER=19
    BOOLEAN=20
    STRING=21
    JSON=22
    ARRAY=23
    CONSTANT=24
    ADD=25
    SUB=26
    MUL=27
    DIV=28
    MOD=29
    EQ=30
    NEQ=31
    GT=32
    GTE=33
    LT=34
    LTE=35
    NOT=36
    AND=37
    OR=38
    SADD=39
    SEQ=40
    ASSIGN=41
    LP=42
    RP=43
    LQP=44
    RQP=45
    LB=46
    RB=47
    COLON=48
    DOT=49
    CM=50
    SM=51
    COMMENT=52
    WS=53
    UNCLOSE_STRING=54
    ILLEGAL_ESCAPE=55
    UNTERMINATED_COMMENT=56
    ERROR_CHAR=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CSELParser.EOF, 0)

        def manyDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.ManyDeclContext)
            else:
                return self.getTypedRuleContext(CSELParser.ManyDeclContext,i)


        def getRuleIndex(self):
            return CSELParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CSELParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 88
                self.manyDecl()
                self.state = 91 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.FUNCTION) | (1 << CSELParser.LET) | (1 << CSELParser.CONSTANT))) != 0)):
                    break

            self.state = 93
            self.match(CSELParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ManyDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(CSELParser.VarDeclContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(CSELParser.FuncDeclContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_manyDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitManyDecl" ):
                return visitor.visitManyDecl(self)
            else:
                return visitor.visitChildren(self)




    def manyDecl(self):

        localctx = CSELParser.ManyDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_manyDecl)
        try:
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSELParser.LET, CSELParser.CONSTANT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.varDecl()
                pass
            elif token in [CSELParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.funcDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.VariableContext)
            else:
                return self.getTypedRuleContext(CSELParser.VariableContext,i)


        def SM(self):
            return self.getToken(CSELParser.SM, 0)

        def LET(self):
            return self.getToken(CSELParser.LET, 0)

        def CONSTANT(self):
            return self.getToken(CSELParser.CONSTANT, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.CM)
            else:
                return self.getToken(CSELParser.CM, i)

        def getRuleIndex(self):
            return CSELParser.RULE_varDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = CSELParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            _la = self._input.LA(1)
            if not(_la==CSELParser.LET or _la==CSELParser.CONSTANT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 100
            self.variable()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSELParser.CM:
                self.state = 101
                self.match(CSELParser.CM)
                self.state = 102
                self.variable()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(CSELParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(CSELParser.NUMBER, 0)

        def BOOLEAN(self):
            return self.getToken(CSELParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(CSELParser.STRING, 0)

        def JSON(self):
            return self.getToken(CSELParser.JSON, 0)

        def ARRAY(self):
            return self.getToken(CSELParser.ARRAY, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_typ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTyp" ):
                return visitor.visitTyp(self)
            else:
                return visitor.visitChildren(self)




    def typ(self):

        localctx = CSELParser.TypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_typ)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.NUMBER) | (1 << CSELParser.BOOLEAN) | (1 << CSELParser.STRING) | (1 << CSELParser.JSON) | (1 << CSELParser.ARRAY))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(CSELParser.VarContext,0)


        def COLON(self):
            return self.getToken(CSELParser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(CSELParser.TypContext,0)


        def ASSIGN(self):
            return self.getToken(CSELParser.ASSIGN, 0)

        def vartail(self):
            return self.getTypedRuleContext(CSELParser.VartailContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_variable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = CSELParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.var()
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.COLON:
                self.state = 113
                self.match(CSELParser.COLON)
                self.state = 114
                self.typ()


            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.ASSIGN:
                self.state = 117
                self.match(CSELParser.ASSIGN)

                self.state = 118
                self.vartail()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VartailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(CSELParser.LiteralContext,0)


        def expr(self):
            return self.getTypedRuleContext(CSELParser.ExprContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_vartail

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVartail" ):
                return visitor.visitVartail(self)
            else:
                return visitor.visitChildren(self)




    def vartail(self):

        localctx = CSELParser.VartailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vartail)
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.literal()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CSELParser.ID, 0)

        def LQP(self):
            return self.getToken(CSELParser.LQP, 0)

        def varlist(self):
            return self.getTypedRuleContext(CSELParser.VarlistContext,0)


        def RQP(self):
            return self.getToken(CSELParser.RQP, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = CSELParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(CSELParser.ID)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.LQP:
                self.state = 126
                self.match(CSELParser.LQP)
                self.state = 127
                self.varlist()
                self.state = 128
                self.match(CSELParser.RQP)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMLIT(self):
            return self.getToken(CSELParser.NUMLIT, 0)

        def CM(self):
            return self.getToken(CSELParser.CM, 0)

        def varlist(self):
            return self.getTypedRuleContext(CSELParser.VarlistContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_varlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarlist" ):
                return visitor.visitVarlist(self)
            else:
                return visitor.visitChildren(self)




    def varlist(self):

        localctx = CSELParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varlist)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.match(CSELParser.NUMLIT)
                self.state = 133
                self.match(CSELParser.CM)
                self.state = 134
                self.varlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.match(CSELParser.NUMLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(CSELParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(CSELParser.FALSE, 0)

        def NUMLIT(self):
            return self.getToken(CSELParser.NUMLIT, 0)

        def STRINGLIT(self):
            return self.getToken(CSELParser.STRINGLIT, 0)

        def arrayLiteral(self):
            return self.getTypedRuleContext(CSELParser.ArrayLiteralContext,0)


        def jsonLiteral(self):
            return self.getTypedRuleContext(CSELParser.JsonLiteralContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = CSELParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_literal)
        try:
            self.state = 144
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSELParser.TRUE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(CSELParser.TRUE)
                pass
            elif token in [CSELParser.FALSE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.match(CSELParser.FALSE)
                pass
            elif token in [CSELParser.NUMLIT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 140
                self.match(CSELParser.NUMLIT)
                pass
            elif token in [CSELParser.STRINGLIT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 141
                self.match(CSELParser.STRINGLIT)
                pass
            elif token in [CSELParser.LQP]:
                self.enterOuterAlt(localctx, 5)
                self.state = 142
                self.arrayLiteral()
                pass
            elif token in [CSELParser.LB]:
                self.enterOuterAlt(localctx, 6)
                self.state = 143
                self.jsonLiteral()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayLiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LQP(self):
            return self.getToken(CSELParser.LQP, 0)

        def RQP(self):
            return self.getToken(CSELParser.RQP, 0)

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.LiteralContext)
            else:
                return self.getTypedRuleContext(CSELParser.LiteralContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.CM)
            else:
                return self.getToken(CSELParser.CM, i)

        def getRuleIndex(self):
            return CSELParser.RULE_arrayLiteral

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayLiteral" ):
                return visitor.visitArrayLiteral(self)
            else:
                return visitor.visitChildren(self)




    def arrayLiteral(self):

        localctx = CSELParser.ArrayLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arrayLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(CSELParser.LQP)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.NUMLIT) | (1 << CSELParser.STRINGLIT) | (1 << CSELParser.TRUE) | (1 << CSELParser.FALSE) | (1 << CSELParser.LQP) | (1 << CSELParser.LB))) != 0):
                self.state = 147
                self.literal()
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CSELParser.CM:
                    self.state = 148
                    self.match(CSELParser.CM)
                    self.state = 149
                    self.literal()
                    self.state = 154
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 157
            self.match(CSELParser.RQP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JsonLiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(CSELParser.LB, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.ID)
            else:
                return self.getToken(CSELParser.ID, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.COLON)
            else:
                return self.getToken(CSELParser.COLON, i)

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.LiteralContext)
            else:
                return self.getTypedRuleContext(CSELParser.LiteralContext,i)


        def RB(self):
            return self.getToken(CSELParser.RB, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.CM)
            else:
                return self.getToken(CSELParser.CM, i)

        def getRuleIndex(self):
            return CSELParser.RULE_jsonLiteral

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJsonLiteral" ):
                return visitor.visitJsonLiteral(self)
            else:
                return visitor.visitChildren(self)




    def jsonLiteral(self):

        localctx = CSELParser.JsonLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_jsonLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(CSELParser.LB)
            self.state = 160
            self.match(CSELParser.ID)
            self.state = 161
            self.match(CSELParser.COLON)
            self.state = 162
            self.literal()
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSELParser.CM:
                self.state = 163
                self.match(CSELParser.CM)
                self.state = 164
                self.match(CSELParser.ID)
                self.state = 165
                self.match(CSELParser.COLON)
                self.state = 166
                self.literal()
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 172
            self.match(CSELParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(CSELParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(CSELParser.ID, 0)

        def LP(self):
            return self.getToken(CSELParser.LP, 0)

        def RP(self):
            return self.getToken(CSELParser.RP, 0)

        def LB(self):
            return self.getToken(CSELParser.LB, 0)

        def body(self):
            return self.getTypedRuleContext(CSELParser.BodyContext,0)


        def RB(self):
            return self.getToken(CSELParser.RB, 0)

        def paraList(self):
            return self.getTypedRuleContext(CSELParser.ParaListContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_funcDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)




    def funcDecl(self):

        localctx = CSELParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.match(CSELParser.FUNCTION)
            self.state = 175
            self.match(CSELParser.ID)
            self.state = 176
            self.match(CSELParser.LP)
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.ID:
                self.state = 177
                self.paraList()


            self.state = 180
            self.match(CSELParser.RP)
            self.state = 181
            self.match(CSELParser.LB)
            self.state = 182
            self.body()
            self.state = 183
            self.match(CSELParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParaListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.ParamContext)
            else:
                return self.getTypedRuleContext(CSELParser.ParamContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.CM)
            else:
                return self.getToken(CSELParser.CM, i)

        def getRuleIndex(self):
            return CSELParser.RULE_paraList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParaList" ):
                return visitor.visitParaList(self)
            else:
                return visitor.visitChildren(self)




    def paraList(self):
